Move away from dh-virtualenv

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 github-sync (0) UNRELEASED; urgency=low
 
   * Initial version.
+  * wrap-and-sort -sa.
 
  -- Chris Lamb <lamby@debian.org>  Wed, 02 Sep 2015 17:27:12 +0100
